<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/building_number_street_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:padding="4dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/street_name"
        android:padding="4dp"
        android:inputType="none"
        android:digits="ёйцукенгшщзхъфывапролджэячсмитьбюЁЙЦУКЕНГШЩЗХЪФЫВАПРОЛДЖЭЯЧСМИТЬБЮ " />

    <TextView
        android:text="@string/building_number_equation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:padding="4dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/equation"
        android:padding="4dp"
        android:digits="0123456789xX+-*/ "
        android:inputType="none" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <TextView
        android:text="@string/building_number_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:padding="4dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/building_result"
        android:padding="4dp"
        android:textSize="50sp"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textColor="@android:color/holo_green_dark"
        tools:text="13"
        />

    <Button
        android:text="@string/calculate_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/calculate_button"
        android:background="?attr/colorPrimary" />
</LinearLayout>