<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <Button
            android:text="@string/sum_numbers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/sum_numbers"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp" />

        <Button
            android:text="@string/alphabet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/alphabet"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_dark"
            android:padding="24dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp" />

        <Button
            android:text="@string/building_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/building_number"
            android:layout_weight="1"
            android:background="@android:color/holo_green_dark"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp" />
    </LinearLayout>
